--- a/src/app/pages/dashboard/main-header/main-header.component.html
+++ b/src/app/pages/dashboard/main-header/main-header.component.html
@@ -12,7 +12,7 @@
   </ion-toolbar>
   @if(isSearch()) {
   <div class="ion-display-flex">
-    <ion-searchbar placeholder="Search projects"></ion-searchbar>
+    <ion-searchbar placeholder="جستجو ..."></ion-searchbar>
     <ion-button (click)="onSearch()" fill="clear" shape="round">
       <ion-icon name="funnel-outline" color="medium"></ion-icon>
     </ion-button>
