--- a/src/app/pages/dashboard/main-tabs/main-tabs.component.html
+++ b/src/app/pages/dashboard/main-tabs/main-tabs.component.html
@@ -9,7 +9,7 @@
       خانه
     </ion-tab-button>
 
-    <ion-tab-button [tab]="'form'" class="chart">
+    <ion-tab-button [tab]="'report'" class="chart">
       <ion-icon name="pie-chart"></ion-icon>
       گزارشات
     </ion-tab-button>
