--- a/src/app/pages/user-profile/user-profile.page.html
+++ b/src/app/pages/user-profile/user-profile.page.html
@@ -1,13 +1,16 @@
 <ion-content>
   <div class="profile-card">
     <div class="profile-header">
-      <div class="avatar">
-        <ion-icon name="person-circle"></ion-icon>
-      </div>
-      <h2 class="user-name">{{ user ? user.full_name : '' }}</h2>
-      <p class="user-email">{{ user ? user.email : '' }}</p>
-      <div class="attendance-status">
-        <span class="status-present">●</span> حاضر در محیط کار
+      <div class="p-absolute w-100 h-100 background-opacity"></div>
+      <div class="p-relative">
+        <div class="avatar">
+          <ion-icon name="person-circle"></ion-icon>
+        </div>
+        <h2 class="user-name">{{ user ? user.full_name : '' }}</h2>
+        <p class="user-email">{{ user ? user.email : '' }}</p>
+        <div class="attendance-status">
+          <span class="status-present">●</span> حاضر در محیط کار
+        </div>
       </div>
     </div>
 
@@ -63,19 +66,29 @@
   <ng-template>
     <ion-content class="ion-padding">
       <div class="modal-content">
-                <div>
-                    <ion-icon class="modal-icon" name="log-out-outline"></ion-icon>
-                    <h2 class="modal-title">خروج از حساب کاربری</h2>
-                    <p class="modal-message">آیا از خروج از حساب کاربری خود اطمینان دارید؟</p>
-                </div>
-                
-                <div class="modal-actions">
-                  <ion-button class="modal-button logout-button" id="logoutButton" (click)="logout()">خروج</ion-button>
-                  <ion-button class="modal-button cancel-button" id="cancelButton" (click)="setOpen(false)">بازگشت</ion-button>
-                </div>
-            </div>
+        <div>
+          <ion-icon class="modal-icon" name="log-out-outline"></ion-icon>
+          <h2 class="modal-title">خروج از حساب کاربری</h2>
+          <p class="modal-message">
+            آیا از خروج از حساب کاربری خود اطمینان دارید؟
+          </p>
+        </div>
 
+        <div class="modal-actions">
+          <ion-button
+            class="modal-button logout-button"
+            id="logoutButton"
+            (click)="logout()"
+            >خروج</ion-button
+          >
+          <ion-button
+            class="modal-button cancel-button"
+            id="cancelButton"
+            (click)="setOpen(false)"
+            >بازگشت</ion-button
+          >
+        </div>
+      </div>
     </ion-content>
-
   </ng-template>
-    </ion-modal>
+</ion-modal>
