Implementation Requests page

--- a/src/app/pages/dashboard/main-menu/main-menu.component.html
+++ b/src/app/pages/dashboard/main-menu/main-menu.component.html
@@ -193,7 +193,9 @@
           name="log-out"
           class="menu-icon ion-margin-end"
         ></ion-icon>
-        <ion-text class="menu-label">{{ "SignOut" | translate }}</ion-text>
+        <ion-text color="danger" class="menu-label">{{
+          "SignOut" | translate
+        }}</ion-text>
       </ion-item>
     </ion-list>
   </ion-content>
