--- a/src/app/pages/form/form-dialog/form-dialog.component.html
+++ b/src/app/pages/form/form-dialog/form-dialog.component.html
@@ -10,6 +10,7 @@
       <ion-buttons slot="end">
         <ion-button
           [disabled]="form.invalid || !listField.length"
+          color="success"
           (click)="onSubmit()"
         >
           <ion-icon name="checkmark-outline"></ion-icon>
