--- a/src/app/pages/request/request-type/request-type.page.html
+++ b/src/app/pages/request/request-type/request-type.page.html
@@ -1,13 +1,56 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>request-type</ion-title>
-  </ion-toolbar>
-</ion-header>
-
+<app-main-header></app-main-header>
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">request-type</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-breadcrumbs
+    class="ion-justify-content-center d-flex"
+    [maxItems]="maxBreadcrumbs"
+    (ionCollapsedClick)="expandBreadcrumbs()"
+  >
+    @for (item of breadCrumbs; track $index) {
+    <ion-breadcrumb (click)="breadcrumbItem(item)"
+      >{{item.title}}</ion-breadcrumb
+    >
+    }
+  </ion-breadcrumbs>
+
+  <ion-list [inset]="true" class="m-0">
+    @for (item of list; track $index) {
+    <ion-item-sliding>
+      <ion-item
+        (click)="showChildrens(item)"
+        [button]="true"
+        detail="true"
+        style="--padding-start: 0"
+      >
+        <ion-avatar aria-hidden="true" slot="start">
+          <img alt="" src="assets/icon/form.png" />
+        </ion-avatar>
+        <ion-text class="ms-3">{{item.title}}</ion-text>
+      </ion-item>
+      <ion-item-options slot="end">
+        <ion-item-option color="danger" expandable="true">
+          <ion-icon slot="icon-only" name="trash"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+    }
+  </ion-list>
+  <ion-fab slot="fixed" vertical="bottom" horizontal="end">
+    <ion-fab-button color="medium" size="small" id="open-request-type-dialog">
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+  <ion-modal
+    #requesttypeModal
+    trigger="open-request-type-dialog"
+    [canDismiss]="canDismiss"
+    [presentingElement]="presentingElement"
+    (willPresent)="onWillPresent()"
+  >
+    <ng-template>
+      <app-request-type-dialog
+        [modal]="requesttypeModal"
+        (dismissChange)="onDismissChange($event)"
+      ></app-request-type-dialog>
+    </ng-template>
+  </ion-modal>
 </ion-content>
