--- a/src/app/pages/workflow/workflow.page.html
+++ b/src/app/pages/workflow/workflow.page.html
@@ -1,13 +1,50 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>workflow</ion-title>
-  </ion-toolbar>
-</ion-header>
-
+<app-main-header></app-main-header>
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">workflow</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-list [inset]="true" class="m-0">
+    <ion-item-sliding>
+      <ion-item [button]="true" detail="true" style="--padding-start: 0">
+        <ion-avatar aria-hidden="true" slot="start">
+          <img alt="" src="assets/icon/form.png" />
+        </ion-avatar>
+        <ion-text class="ms-3">Rick Astley</ion-text>
+      </ion-item>
+      <ion-item-options slot="end">
+        <ion-item-option color="danger" expandable="true">
+          <ion-icon slot="icon-only" name="trash"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+    <ion-item-sliding>
+      <ion-item [button]="true" detail="true" style="--padding-start: 0">
+        <ion-avatar aria-hidden="true" slot="start">
+          <img alt="" src="assets/icon/form.png" />
+        </ion-avatar>
+        <ion-text class="ms-3">Rick Astley</ion-text>
+      </ion-item>
+      <ion-item-options slot="end">
+        <ion-item-option color="danger" expandable="true">
+          <ion-icon slot="icon-only" name="trash"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+  </ion-list>
+  <ion-fab slot="fixed" vertical="bottom" horizontal="end">
+    <ion-fab-button color="medium" size="small" id="open-workflow-dialog">
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+  <ion-modal
+    #workflowModal
+    trigger="open-workflow-dialog"
+    [canDismiss]="canDismiss"
+    [presentingElement]="presentingElement"
+    (willPresent)="onWillPresent()"
+  >
+    <ng-template>
+      <app-workflow-dialog
+        [modal]="workflowModal"
+        (dismissChange)="onDismissChange($event)"
+      ></app-workflow-dialog>
+    </ng-template>
+  </ion-modal>
 </ion-content>
