--- a/src/app/pages/request/request-type/request-type-dialog/request-type-dialog.component.html
+++ b/src/app/pages/request/request-type/request-type-dialog/request-type-dialog.component.html
@@ -8,8 +8,8 @@
       </ion-buttons>
       <ion-title>{{ "AddRequestType" | translate }}</ion-title>
       <ion-buttons slot="end">
+        <!-- [disabled]="form.invalid" -->
         <ion-button
-          [disabled]="form.invalid"
           color="success"
           (click)="onSubmit()"
         >
