--- a/src/app/pages/workflow/workflow-dialog/workflow-dialog.component.html
+++ b/src/app/pages/workflow/workflow-dialog/workflow-dialog.component.html
@@ -8,7 +8,7 @@
       </ion-buttons>
       <ion-title>{{ "AddWorkflow" | translate }}</ion-title>
       <ion-buttons slot="end">
-        <ion-button [disabled]="form.invalid" (click)="onSubmit()">
+        <ion-button color="success" (click)="onSubmit()">
           <ion-icon name="checkmark-outline"></ion-icon>
         </ion-button>
       </ion-buttons>
